PP-1282 expose  payment card details in payment api's
 - Enabled card details in get individual payments and search payments api's
 - removed top level `card_brand` attribute as it is now available in `card_details`. However keeping support for the root level attribute for existing clients.
