# src/main/java/uk/gov/pay/api/model/Address.java
@@ -1,0 +1,57 @@
+package uk.gov.pay.api.model;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModel;
+
+import static com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL;
+
+@JsonInclude(NON_NULL)
+@ApiModel(value = "Billing Address", description = "A structure representing the billing address of a card")
+public class Address {
+
+    private String line1;
+    private String line2;
+    private String postcode;
+    private String city;
+    private String county;
+    private String country;
+
+    public Address(@JsonProperty("line1") String line1,
+                   @JsonProperty("line2") String line2,
+                   @JsonProperty("postcode") String postcode,
+                   @JsonProperty("city") String city,
+                   @JsonProperty("county") String county,
+                   @JsonProperty("country") String country) {
+        this.line1 = line1;
+        this.line2 = line2;
+        this.postcode = postcode;
+        this.city = city;
+        this.county = county;
+        this.country = country;
+    }
+
+    public String getLine1() {
+        return line1;
+    }
+
+    public String getLine2() {
+        return line2;
+    }
+
+    public String getPostcode() {
+        return postcode;
+    }
+
+    public String getCity() {
+        return city;
+    }
+
+    public String getCounty() {
+        return county;
+    }
+
+    public String getCountry() {
+        return country;
+    }
+}
